--- a/papers/gpce2013/biblio.bib
+++ b/papers/gpce2013/biblio.bib
@@ -1,3 +1,12 @@
+@inproceedings{Jorring1986_Staging,
+  title={Compilers and staging transformations},
+  author={J{\o}rring, Ulrik and Scherlis, William L},
+  booktitle={Proceedings of the 13th ACM SIGACT-SIGPLAN symposium on Principles of programming languages},
+  pages={86--96},
+  year={1986},
+  organization={ACM}
+}
+
 @article{Elliott2003_Compiling,
   title={Compiling embedded languages},
   author={Elliott, Conal and Finne, Sigbj{\o}rn and De Moor, Oege},
